--- a/spring-cucumber-apitest/pom.xml
+++ b/spring-cucumber-apitest/pom.xml
@@ -74,6 +74,30 @@
 		    <version>1.3.2</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
+		<!-- <dependency>
+		    <groupId>com.thoughtworks.xstream</groupId>
+		    <artifactId>xstream</artifactId>
+		    <version>1.4.9</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>com.thoughtworks.xstream</groupId>
+    		<artifactId>xstream</artifactId>
+   			 <version>1.4.7</version>
+		</dependency> -->	
+		
+		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-oxm</artifactId>
+    		<version>4.1.4.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+    <groupId>com.thoughtworks.xstream</groupId>
+    <artifactId>xstream</artifactId>
+    <version>1.4.9</version>
+</dependency>
 		
 	</dependencies>
 
