--- a/spring-cucumber-apitest/pom.xml
+++ b/spring-cucumber-apitest/pom.xml
@@ -24,6 +24,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<cucumber.java.version>1.2.4</cucumber.java.version>
+		<!-- <start-class>com.example.APIController</start-class>-->
 	</properties>
 
 	<dependencies>
@@ -74,19 +75,6 @@
 		    <version>1.3.2</version>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
-		<!-- <dependency>
-		    <groupId>com.thoughtworks.xstream</groupId>
-		    <artifactId>xstream</artifactId>
-		    <version>1.4.9</version>
-		</dependency>
-		
-		<dependency>
-    		<groupId>com.thoughtworks.xstream</groupId>
-    		<artifactId>xstream</artifactId>
-   			 <version>1.4.7</version>
-		</dependency> -->	
-		
 		<dependency>
     		<groupId>org.springframework</groupId>
     		<artifactId>spring-oxm</artifactId>
@@ -94,10 +82,10 @@
 		</dependency>
 		
 		<dependency>
-    <groupId>com.thoughtworks.xstream</groupId>
-    <artifactId>xstream</artifactId>
-    <version>1.4.9</version>
-</dependency>
+		    <groupId>com.thoughtworks.xstream</groupId>
+		    <artifactId>xstream</artifactId>
+		    <version>1.4.9</version>
+		</dependency>
 		
 	</dependencies>
 
@@ -107,6 +95,10 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+   				<groupId>org.apache.maven.plugins</groupId>
+   				<artifactId>maven-surefire-plugin</artifactId>
+   			</plugin>
 		</plugins>
 	</build>
 
